# spout

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  llms.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: CODING_GUIDELINES.md  spout-prd.md
docs/planning/: 01-learning.md  01-planning.md  02-learning.md  02-planning.md  03-learning.md  03-planning.md  05-learning.md  05-planning.md  06-learning.md  06-planning.md  07-learning.md  07-planning.md  08-learning.md  08-planning.md  09-learning.md  09-planning.md  10-learning.md  10-planning.md  README.md
docs/proposals/: compose-alloc.md  gc-command.md  prune-command.md  udp-support.md
src/: allocator.rs  cli.rs  commands.rs  date.rs  error.rs  format.rs  main.rs  project.rs  project_markers.rs  protocol.rs  registry.rs  services.rs  tui.rs
src/commands/: alloc.rs  mod.rs  prune.rs  realloc.rs  reproject.rs  rm.rs  tests.rs
src/commands/alloc/: compose.rs  mod.rs  tests.rs
src/commands/alloc/compose/: tests.rs
src/commands/prune/: mod.rs  scanner.rs
src/error/: mod.rs  tests.rs
src/format/: mod.rs  plain.rs  rich.rs
src/registry/: io.rs  mod.rs  tests.rs
templates/: CLAUDE.md
