[package]
name = "spout"
version = "0.1.0"
edition = "2021"
rust-version = "1.88.0"
description = "Local development port registry. No daemon. No config. No surprises."
repository = "https://github.com/spout-cli/spout"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["port", "docker", "registry", "cli", "development"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fd-lock = "4"
tempfile = "3"
thiserror = "2"
dirs = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
